<resources>
    <string name="app_name">Oceanbnb</string>
    <string name="signup_name_hint">Name</string>
    <string name="sign_up_fragment_email_hint">E-mail</string>
    <string name="signup_fragment_password_hint">Password</string>
    <string name="signup_fragment_reenter_password_hint">Confirm password</string>
    <string name="signup_button_hint">Sign up</string>
    <string name="fragment_account_signin_tab">SIGN IN</string>
    <string name="fragment_account_signup_tab">SIGN UP</string>
    <string name="passwords_dont_match_error_message">Passwords don\'t match</string>
    <string name="short_password_error">Password is too short</string>
    <string name="signup_required_field_error">Required field</string>
    <string name="invalid_email_error">invalid e-mail</string>
    <string name="registration_failed">Registration failed</string>
    <string name="fragment_login_email_hint">E-mail</string>
    <string name="fragment_login_password_hint">Password</string>
    <string name="fragment_signin_button_text">Sign in</string>
    <string name="fragment_signin_with_facebook_button_text">Sign in with Facebook</string>
    <string name="fragment_sign_up_button_text">Sign up</string>
    <string name="invalid_input_login_toast">Invalid username/password</string>
    <string name="login_failed_toast">Login failed</string>
    <string name="fragment_login__forgotten_password_text_view">Forgot your password?</string>
    <string name="fragment_login_login_failed">Login failed</string>
    <string name="fragment_cuises_no_cruises_found_toast">No crusies found</string>
    <string name="fragment_cruise_details_no_data_toast">Failed to load cruise</string>
    <string name="fragment_roll_call_load_failed_toast">Failed to load users</string>
    <string name="list_item_user_city_text">City</string>
    <string name="list_item_user_user_name_text">User name</string>
    <string name="list_item_user_email_text">Email</string>
    <string name="fragment_roll_call_added_toast">Successfully added</string>
    <string name="fragment_roll_call_removed_toast">Successfully removed</string>
    <string name="fragment_roll_call_add_me_button">Add me</string>
    <string name="fragment_roll_call_remove_me_button">Remove me</string>
    <string name="fragment_cruise_details_roll_call_text">Roll Call</string>
    <string name="fragment_cruise_details_ship_details_text">Ship details</string>
    <string name="fragment_cuise_details_cruise_name_placeholder">Cruise name</string>
    <string name="fragment_main_pager_profile_title">Profile</string>
    <string name="fragment_main_pager_cruises_title">Cruises</string>
    <string name="ship_details_fragment_no_data_toast">Failed to load ship info</string>
    <string name="fragment_ship_details_ship_name_text">Ship Name:</string>
    <string name="fragment_ship_details__year_built_text">Year built:</string>
    <string name="fragment_ship_details_passenger_capacity_text">Passenger capacity:</string>
    <string name="fragment_ship_details_crew_count_text">Crew count:</string>
    <string name="fragment_ship_details_weight_in_tons_text">Weight in tons:</string>
    <string name="fragment_ship_details_length_in_meters_text">Length in meters:</string>
    <string name="fragment_ship_details_beam_in_meters_text">Beam in meters:</string>
    <string name="fragment_profile_name_placeholder">Name</string>
    <string name="fragment_profile_email_placeholder">Email</string>
    <string name="fragment_profile_gender_placeholder">Gender</string>
    <string name="fragment_profile_city_placeholder">City</string>
    <string name="fragment_profile_description_placeholder">Description</string>
    <string name="fragment_profile_my_cruises_text">My cruises</string>
    <string name="list_item_cruise_cruise_name_placeholder">Cruise name</string>
    <string name="fragment_cruise_details_destinations_text">Destinations</string>
</resources>
