<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/cruise"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/fragment_cruise_details_cruise_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fragment_cuise_details_cruise_name_placeholder"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/fragment_cruise_details_roll_call_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/ic_receipt_black_24dp"/>
        <TextView
            android:text="@string/fragment_cruise_details_roll_call_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/fragment_cruise_details_ship_details_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@mipmap/ic_launcher"/>
        <TextView
            android:text="@string/fragment_cruise_details_ship_details_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginStart="20dp"
        android:text="@string/fragment_cruise_details_destinations_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"/>
    <android.support.v7.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.gms.maps.MapView
        android:id="@+id/fragment_cruise_details_mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/map_frame" />
    </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>