<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@android:color/holo_blue_light">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <stoyanoff.oceanbnb_android.util.RoundedImageView
                android:id="@+id/list_item_user_image_view"
                android:layout_width="70dp"
                android:layout_height="70dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/list_item_user_name_text_view"
            android:text="@string/list_item_user_user_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/list_item_user_email_text_view"
            android:text="@string/list_item_user_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/list_item_user_city_text_view"
            android:text="@string/list_item_user_city_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
