<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary"
        android:id="@+id/view"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fragment_profile_cruises_image_view"
        android:layout_marginStart="11dp"
        android:text="@string/fragment_profile_my_cruises_text"
        android:textColor="@android:color/white" />

    <stoyanoff.oceanbnb_android.util.RoundedImageView
        android:id="@+id/fragment_profile_roundedImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="64dp"
        android:layout_alignBottom="@+id/view"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/fragment_profile_edit_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:srcCompat="@drawable/ic_mode_edit_white_24px"
        android:background="@android:color/transparent"
        android:layout_marginTop="18dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/fragment_profile_logout_image_view"
        android:layout_marginEnd="12dp" />

    <ImageView
        android:id="@+id/fragment_profile_logout_image_view"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:srcCompat="@drawable/ic_exit_to_app_black_24dp"
        android:layout_marginEnd="11dp"
        android:layout_alignBottom="@+id/fragment_profile_edit_button"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/fragment_profile_cruises_image_view"
        app:srcCompat="@drawable/ic_rowing_black_24dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/fragment_profile_edit_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_profile_blue" />

                <TextView
                    android:id="@+id/fragment_profile_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/fragment_profile_name_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_email_black_24px" />

                <TextView
                    android:id="@+id/fragment_profile_email_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/fragment_profile_email_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_android_black_24dp" />

                <TextView
                    android:id="@+id/fragment_profile_gender_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/fragment_profile_gender_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_location_city_black_24px" />

                <TextView
                    android:id="@+id/fragment_profile_city_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/fragment_profile_city_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_description_black_24px" />

                <TextView
                    android:id="@+id/fragment_profile_description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/fragment_profile_description_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>